✅ Agregar la aplicación de reloj digital y analógico con estilos y lógica de funcionamiento. Incluye soporte para formato de 12/24 horas y modo digital/analógico.

--- a/apps/dia-001/index.html
+++ b/apps/dia-001/index.html
@@ -8,16 +8,7 @@
   <link rel="stylesheet" href="../app-styles.css">
   <link rel="stylesheet" href="app.css">
 </head>
-<body>
-  <header>
-    <div class="header-content">
-      <button id="back" aria-label="Volver">← Volver</button>
-      <h1>Contador</h1>
-      <button id="toggle-mode" aria-label="Cambiar modo">🌙</button>
-    </div>
-  </header>
-  
-  <main>
+<body><main>
     <div class="container">
       <div class="app-content">
         <div class="counter">
@@ -29,6 +20,7 @@
     </div>
   </main>
   
+  <script src="../../components/loader.js"></script>
   <script src="../../common.js"></script>
   <script src="app.js"></script>
 </body>
