--- a/apps/dia-002/index.html
+++ b/apps/dia-002/index.html
@@ -4,19 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conversor de Divisas | 100 Apps JS</title>
-  <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="../app-styles.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <button id="back" aria-label="Volver">← Volver</button>
-      <h1>Conversor de Divisas</h1>
-      <button id="toggle-mode" aria-label="Cambiar modo">🌙</button>
-    </div>
-  </header>
-  
   <main>
     <div class="container">
       <div class="app-content">
@@ -73,6 +64,7 @@
     </div>
   </main>
   
+  <script src="../../components/loader.js"></script>
   <script src="../../common.js"></script>
   <script src="app.js"></script>
 </body>
