🎉 Añadir nuevas aplicaciones: gestor de tareas y notas con estructura HTML y estilos básicos

--- a/apps/dia-003/index.html
+++ b/apps/dia-003/index.html
@@ -9,14 +9,6 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <button id="back" aria-label="Volver">← Volver</button>
-      <h1>Reloj Digital/Analógico</h1>
-      <button id="toggle-mode" aria-label="Cambiar modo">🌙</button>
-    </div>
-  </header>
-  
   <main>
     <div class="container">
       <div class="app-content">
@@ -46,7 +38,8 @@
     </div>
   </main>
   
-  <script src="../../common.js"></script>
+  <script src="../../components/loader.js"></script>
+  
   <script src="app.js"></script>
 </body>
 </html>
